<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PressureRecording">


    <Button
        android:id="@+id/button_sv2"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="360dp"
        android:onClick="button_sv_press_rec"
        android:text="@string/button_sv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_zag_press"
        android:layout_width="310dp"
        android:layout_height="22dp"
        android:layout_marginTop="16dp"
        android:text="@string/textView_zag_press"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <view
        android:id="@+id/view2"
        class="androidx.constraintlayout.widget.Group"
        android:layout_width="351dp"
        android:layout_height="94dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="440dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="120dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:onClick="button_back"
        android:text="@string/btn_act"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <Button
        android:id="@+id/button_go"
        android:layout_width="120dp"
        android:layout_height="58dp"

        android:layout_marginEnd="16dp"
        android:onClick="button_go"
        android:text="@string/btn_life"
        app:layout_constraintBottom_toBottomOf="@+id/button_back"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/button_back" />


    <TextView
        android:id="@+id/textView_thkd"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textView_thkd"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_nd"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber3" />

    <TextView
        android:id="@+id/textView_puls"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textView_puls"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_vd"
        app:layout_constraintTop_toBottomOf="@+id/textView_dat_dat" />

    <TextView
        android:id="@+id/textView_nd"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/textView_nd"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <TextView
        android:id="@+id/textView_dat_txt"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textView_dat_txt"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_zag_press" />

    <TextView
        android:id="@+id/textView_dat_dat"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:format12Hour="HH:mm"
        android:format24Hour="dd-MM-yyyy HH:mm"
        android:text="@string/textView_dat_dat"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textView_dat_txt"
        app:layout_constraintTop_toBottomOf="@+id/textView_zag_press" />

    <TextView
        android:id="@+id/textView_vd"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/textView_vd"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_dat_txt" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_vd" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_nd" />

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber"
        app:layout_constraintTop_toBottomOf="@+id/textView_puls" />

    <CheckBox
        android:id="@+id/checkBox_thkd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/checkBox_thkd"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber2"
        app:layout_constraintTop_toBottomOf="@+id/textView_thkd" />

</androidx.constraintlayout.widget.ConstraintLayout>